# jse-annotate

./: .gitignore  LICENSE  Pipfile  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/backend/: settings.py  urls.py
backend/initialdata/: usstates.csv
backend/jobsearch/: admin.py  models.py  serializers.py  skillextract.py  views.py
backend/jobsearch/migrations/: 0001_initial.py  0002_alter_job_job_desc_remove_job_skill_name_and_more.py  0003_city_county_state_remove_requires_job_name_and_more.py  0004_rename_skill_name_altskill_skill_and_more.py  0005_rename_skill_altskill_skill_name.py  (+9 more)
backend/utils/: calc_compatibility.py  helper_functions.py  process_job.py  scraper.py  skillextract.py
documentation/: JobSearchEngine_Abstract.docx  SP25_CS475_SummarySheet_Smith_Pappelis.tex
documentation/SRS/: SP25_CS475_SRS_Smith_Pappelis.tex  WebsiteStateDiagram.drawio
documentation/compatibility_calculation/: SP25_CS475_CompatibilityCalculation_Smith_Pappelis.tex
documentation/final_presentation/: JobSearchEngine_FinalPresentation.pptx
documentation/midterm_presentation/: JobSearchEngine_MidtermPresentation.pptx
frontend/: package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.tsx  modal.css
public/: manifest.json
scripts/: skill_data.csv  skillsToJson.py
src/: background.ts  color.ts  formatting.ts  siteUtils.ts  sites.ts  skillExtract.ts  skills.json  style.css  types.ts  utils.ts
test/: skillExtract.test.ts  utils.test.ts
webpack/: webpack.config.js
(+50 files in other folders)
