[project]
name = "job-search-engine"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthew Smith",email = "mps3@hood.edu"},
	{name = "Chris Pappelis",email = "cfp4@hood.edu"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "django-cors-headers (>=4.6.0,<5.0.0)",
    "django-environ (>=0.12.0,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
